docs: expand JVM and network study notes